# simd-playground

./: .gitignore  Cargo.toml  README.md  clippy.toml  rustfmt.toml
benches/: buffer_size_bench.rs  cache_aware_bench.rs  cold_disk_bench.rs  csv_adversarial_bench.rs  csv_parse_bench.rs  csv_state_machine_bench.rs  disk_vs_memory_bench.rs  json_escape_bench.rs  large_file_bench.rs  line_feed_bench.rs
src/: csv_parse.rs  csv_parse_buffer_size_impact.rs  csv_state_machine.rs  json_escape.rs  json_escape_SWAR.rs  lib.rs  line_feed.rs  line_feed_every_k_bytes.rs
