[package]
name = "scratchpad"
version = "0.1.0"
edition = "2021"

[lib]
name = "scratchpad"
path = "src/lib.rs"

[dependencies]

[[bench]]
name = "line_feed_bench"
harness = false

[[bench]]
name = "json_escape_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"
