[package]
name = "scratchpad"
version = "0.1.0"
edition = "2021"

[lib]
name = "scratchpad"
path = "src/lib.rs"

[dependencies]
memchr = "2.7"

[[bench]]
name = "line_feed_bench"
harness = false

[[bench]]
name = "json_escape_bench"
harness = false

[[bench]]
name = "csv_parse_bench"
harness = false

[[bench]]
name = "csv_state_machine_bench"
harness = false

[[bench]]
name = "csv_adversarial_bench"
harness = false

[[bench]]
name = "buffer_size_bench"
harness = false

[[bench]]
name = "cache_aware_bench"
harness = false

[[bench]]
name = "disk_vs_memory_bench"
harness = false

[[bench]]
name = "cold_disk_bench"
harness = false

[[bench]]
name = "large_file_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"
